@@ -1,3 +1,7 @@
+2006-05-15  Sven Panne  <sven.panne@aedion.de>
+
+	* tests/altest/altest.c: Fixes for compilation with Visual Studio.
+
 2006-05-12  Sven Panne  <sven.panne@aedion.de>
 
 	* Makefile.am: Removed "permission" target, it is not needed anymore.
